# mlscraper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  autoscrape.py  makefile  requirements.txt  requirements_dev.txt  requirements_fixed.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml  tests.yml
autoscrape/: __init__.py  ml.py  util.py
autoscraper/: __init__.py  ml.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: ecommerce.py  ml_prototype.py  quotes_to_scrape.py  spiegel.py  stackoverflow.py
mlscraper/: __init__.py  html.py  matches.py  ml.py  parser.py  samples.py  scrapers.py  selectors.py  training.py  util.py
requirements/: dev.in  dev.txt  docs.txt  examples.in  examples.txt  tests.in  tests.txt
test/: test_basic.py  test_new.py  test_util.py
test/static/: defined-with-icons.html  multivalued-results.html
test/static/multi/: single-result-page.html
tests/: conftest.py  test_examples.py  test_html.py  test_matches.py  test_new.py  test_samples.py  test_scrapers.py  test_selectors.py  test_training.py  test_util.py
tests/static/: so.html
tests/static/github/: jonashaag.html  lorey.html  siboehm.html
tests/static/multi/: defined-with-icons.html  inline-result-page.html  multivalued-results.html  single-result-page.html
tests/static/single/basic/: train.html
