[metadata]
name = mlscraper
version = attr: mlscraper.__version__
url = https://github.com/lorey/mlscraper
author = Karl Lorey
author_email = git@karllorey.com
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Text Processing :: Markup :: HTML
description = Scrape HTML automatically
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
python_requires = >= 3.9
packages = find:

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
exclude = docs
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit str concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 88

[tool:pytest]
log_cli_level = 1
